Fix font-size for quote on mobile, made 21px

--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@
 @media (max-width: 700px) {
   #quotewords
   {
-    font-size: 19px;
+    font-size: 21px;
   }
   .animateAuthor
   {
